--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,20 @@ matrix:
           - valgrind
 
   - os: linux
+    dist: bionic
+    env: CXX=clang++-10 VARIANT=sanitizers
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - sourceline: 'deb https://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main'
+            key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+        packages:
+          - clang-10
+          - libstdc++-10-dev
+          - valgrind
+
+  - os: linux
     dist: xenial
     env: CXX=g++-9 VARIANT=valgrind
     addons:
@@ -51,18 +65,38 @@ matrix:
           - valgrind
 
   - os: linux
-    dist: xenial
-    env: CXX=g++-9 GCOV=gcov-9 VARIANT=coverage
+    dist: bionic
+    env: CXX=g++-10 VARIANT=valgrind
     addons:
       apt:
         sources:
           - ubuntu-toolchain-r-test
         packages:
-          - g++-9
-          - libstdc++-9-dev
+          - g++-10
+          - libstdc++-10-dev
+          - valgrind
+
+  - os: linux
+    dist: bionic
+    env: CXX=g++-10 GCOV=gcov-10 VARIANT=coverage
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-10
+          - libstdc++-10-dev
 
   - os: osx
     osx_image: xcode11.4
+    env: CXX=clang++ VARIANT=valgrind
+
+  - os: osx
+    osx_image: xcode11.5
+    env: CXX=clang++ VARIANT=valgrind
+
+  - os: osx
+    osx_image: xcode11.6
     env: CXX=clang++ VARIANT=valgrind
 
 script:
